# sshmux

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: app.rs  color_backend.rs  connect.rs  input.rs  keybindings.rs  lib.rs  main.rs  pane.rs  sftp.rs  sftp_parse.rs  ssh_browser.rs  ssh_config.rs  tab.rs  terminal.rs
src/browser/: common.rs  mod.rs  parse.rs  sftp.rs  ssh.rs
src/browser/common/: delete.rs  keys.rs  mod.rs  mouse.rs  navigation.rs  render.rs  selection.rs  transfer.rs
src/components/: bottom_bar.rs  mod.rs  overlays.rs
src/components/browser/: delete.rs  keys.rs  mod.rs  mouse.rs  navigation.rs  parse.rs  selection.rs  sftp.rs  ssh.rs  state.rs  transfer.rs  view.rs
src/components/connect/: mod.rs  state.rs  view.rs
src/components/pane_tree/: mod.rs  tree.rs  view.rs
src/components/terminal/: mod.rs  session.rs  view.rs
src/input/: browser.rs  connect.rs  global.rs  mod.rs  mouse.rs  session.rs  tests.rs
src/pane/: browser.rs  connect.rs  mod.rs  session.rs  tree.rs
src/pty/: mod.rs  unix.rs  win.rs
src/widgets/: bottom_bar.rs  connect.rs  file_browser.rs  mod.rs  overlays.rs  pane_tree.rs  terminal.rs
tests/: integration.rs  run-integration.sh
tests/docker/: Dockerfile  docker-compose.yml
