[package]
name = "sshmux"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
dirs = "6.0.0"
portable-pty = "0.9.0"
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
simplelog = "0.12"
ssh2-config = "0.7.0"
time = { version = "0.3", features = ["macros"] }
vt100 = "0.16.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }
